Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -233,7 +233,7 @@
 
 @media (min-width: 320px) and (max-height: 576px) {
     .truck {
-        display: none;
+        /*display: none;*/
     }
     .info-panel {
         padding-top: 110px;
